Suppress --illegal-access warning.