@@ -290,7 +290,7 @@
                         <includes>
                             <include>**/*Test.java</include>
                         </includes>
-                        <argLine>-XX:-OmitStackTraceInFastThrow -Xms1024m -Xmx2048m</argLine>
+                        <argLine>-XX:-OmitStackTraceInFastThrow -Xms1024m -Xmx2048m --illegal-access=permit</argLine>
                         <runOrder>random</runOrder>
                         <trimStackTrace>false</trimStackTrace>
                         <encoding>UTF-8</encoding>
